tests/ui/fail/invalid-attr.rs
#[argio::argio(outptu = Wrap)]
fn main(n: usize) -> usize {
    n
}
